# sample-autonomous-cloud-coding-agents

./: .dockerignore  .eslintrc.json  .gitallowed  .gitignore  .gitleaks.toml  .gitleaksignore  .mergify.yml  .npmignore  .pre-commit-config.yaml  .projenrc.ts  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  header.js  knip-baseline.json  knip.json  migration-plan.md  mise.toml  package-lock.json  package.json  synth.err
.abca/commands/: review_pr.md  review_prs.md  write_docs.md
.claude/: settings.json
.claude-plugin/agents/: agent-debugger.md
.claude-plugin/hooks/: hooks.json
.claude/commands/: review_prs.md
.cursor/commands/: write_docs.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  rfc.yml
.github/workflows/: auto-approve.yml  build.yml  dead-code-pr.yml  deploy.yml  docs.yml  integ-sweeper.yml  integ.yml  monthly-repo-metrics.yml  pull-request-lint.yml  review-gate.yml  security-pr.yml  security.yml  upgrade-main.yml  upgrade.yml
.projen/: deps.json  tasks.json
.semgrep/: BASELINE.md  silent-success-masking.py  silent-success-masking.ts  silent-success-masking.yaml
.threat-composer/20260331-1834/: threatmodel.tc.json
Plans/: encapsulated-scribbling-sutherland.md
abca-plugin/: README.md  TESTING.md
abca-plugin/agents/: agent-debugger.md
abca-plugin/hooks/: hooks.json
agent/: .dockerignore  .grype.yaml  .vulture_allowlist.py  AGENTS.md  Dockerfile  README.md  entrypoint.py  managed-settings.json  memory.py  mise.toml  prepare-commit-msg.sh  pyproject.toml  run.sh  server.py  system_prompt.py  task_state.py  test_sdk_smoke.py  test_subprocess_threading.py
agent/event-rules/: README.md  schema.json
agent/event-rules-parity/: README.md
agent/event-rules/fixtures/: aggregate-cost-cancel.json  aggregate-turn-count-escalate.json
agent/event-rules/packs/: platform-default-v1.json
agent/policies/: hard_deny.cedar
agent/prompts/: __init__.py  pr_iteration.py
agent/scripts/diagnostics/: test_sdk_smoke.py  test_subprocess_threading.py
agent/src/: attachments.py  aws_session.py  bedrock_creds_helper.py  browser.py  channel_mcp.py  clarification_tool.py  config.py  context.py  demo_buggy_code.py  entrypoint.py  gateway_auth.py  hooks.py  jira_reactions.py  linear_reactions.py  memory.py  models.py  nudge_reader.py  observability.py  output_scanner.py  pipeline.py  policy.py  post_hooks.py  progress_writer.py  prompt_builder.py  registry_loader.py  repo.py  runner.py  sanitization.py  self_review.py  server.py  shell.py  sse_adapter.py  sse_wire.py  stuck_guard.py  task_state.py  telemetry.py  ua.py  user_store.py
agent/src/event_governance/: __init__.py  catalog.py  coordinator.py  engine.py  evaluator.py  gate.py  writer.py
agent/src/prompts/: __init__.py  base.py  decompose.py  default_agent.py  new_task.py  pr_iteration.py  restack.py  self_review.py  web_research.py
agent/src/workflow/: __init__.py  deliverers.py  loader.py  models.py  runner.py  validator.py
agent/tests/: conftest.py  test_attachments.py  test_aws_session.py  test_bedrock_creds_helper.py  test_browser.py  test_cancel_hook.py  test_channel_mcp.py  test_clarification_tool.py  test_config.py  test_conftest_env_scrub.py  test_context.py  test_entrypoint.py  test_event_governance_evaluator.py  test_event_governance_gate.py  test_event_rules_parity.py  test_gateway_auth.py  test_hooks.py  test_jira_reactions.py  test_linear_reactions.py  test_memory.py  test_models.py  test_nudge_hook.py  test_nudge_reader.py  test_observability.py  test_output_scanner.py  test_pipeline.py  test_pipeline_outcomes.py  test_pipeline_post_hook_gates.py  test_pipeline_workflow_seam.py  test_policy.py  test_policy_three_outcome.py  test_poll_for_decision.py  test_post_hooks.py  test_progress_writer.py  test_prompts.py  test_registry_grammar_corpus.py  test_registry_loader.py  test_registry_skill_prompt.py  test_repo.py  test_run_task_from_payload.py  (+17 more)
agent/workflows/coding/: decompose-v1.yaml  new-task-v1.yaml  pr-iteration-v1.yaml  pr-review-v1.yaml  restack-v1.yaml
agent/workflows/default/: agent-v1.yaml
agent/workflows/knowledge/: web-research-v1.yaml
agent/workflows/schema/: workflow.schema.json
agents/: cdk-expert.md
cdk/: .eslintrc.json  AGENTS.md  cdk.json  eslint.config.mjs  mise.toml  package.json  tsconfig.dev.json  tsconfig.jest.json  tsconfig.json
cdk/.jest-cache/: haste-map-96b14acc74e53badaba73f39fbfa2370-f3bddce77337600316dd11be5ca19625-1441679fabe1bcc7261f53ad73ff26e1  perf-cache-96b14acc74e53badaba73f39fbfa2370-da39a3ee5e6b4b0d3255bfef95601890
cdk/bootstrap/: BOOTSTRAP_HASH  bootstrap-template.yaml
cdk/scripts/: README.md
cdk/src/: main.ts
cli/: .eslintrc.json  .gitattributes  .gitignore  AGENTS.md  README.md  eslint.config.mjs  jest.tui.config.cjs  mise.toml  package.json  temp.py  temp2.py  tsconfig.dev.json  tsconfig.jest.json  tsconfig.json
cli/.projen/: deps.json  files.json  tasks.json
cli/src/: ag-ui-translator.ts  api-client.ts  auth.ts  cognito-admin.ts  config.ts  debug.ts  dynamo-clients.ts  errors.ts  format-milestones.ts  format.ts  github-token.ts  index.ts  invite-code.ts  jira-app-actor.ts  jira-oauth.ts  linear-gateway.ts  linear-oauth.ts  retry.ts  (+17 more)
commands/: abca-status.md  abca-submit.md
contracts/: constants.json  constants.md  coverage-thresholds.json
docs/: .gitattributes  .gitignore  .markdown-link-check.json  AGENTS.md  CHERRY_PICK_MANIFEST.md  DEMO_RUNBOOK.md  LICENSE  README.md  astro.config.mjs  interactive-agents-phases-v2.drawio  interactive-agents-phases-v3.drawio  interactive-agents-phases-v4.drawio  interactive-agents-phases-v5.drawio  interactive-agents-phases.drawio  mise.toml  package.json  phase3-cedar-hitl.drawio  sidebar.yaml
hooks/: hooks.json
scripts/: check-constants-sync.ts  check-coverage-thresholds-sync.ts  check-deadcode-ratchet.mjs  check-types-sync.ts  ci-build.sh  cleanup-ephemeral-stacks.sh  linear_epic.py  orchestration-debug.sh  orchestration_debug.py
src/: main.ts
(+1011 files in other folders)
